<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="action_previous">Previous</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">MPG4</string>
    <string name="action_settings">Settings</string>
    <string name="activity_layout1">MPG</string>
    <string name="activity_layout2">Liter/100Km</string>
    <string name="activity_layout3">Distance Imperial</string>
    <string name="activity_layout4">Distance Metric</string>
    <string name="activity_layout5">Description</string>
    <string name="activity_layout6">Converter</string>
    <string name="title_activity_layout2">Liter/100km</string>
    <string name="title_activity_layout3">Distance Imperial</string>
    <string name="title_activity_layout4">Distance Metric</string>
    <string name="title_activity_layout5">Description</string>
    <string name="title_activity_layout6">Converter</string>
    <string name="description5">All car manufacture companies release their products fuel efficiency in scale of MPG or Liter per 100Km, but those numbers are actually just an estimates or the ideal numbers that could be achieved only under some certain conditions such as good quality fuel, brand new tires without any attrition and erosion, flat road, and without any passengers, but not all of us have all those perfect parameters ! so it would be nice to have a better understanding  of our automobile fuel consuming to see if ours is the green one or not.</string>
    <string name="description"> Please note that the distance is calculated based on the average of  MPG and the distance you can go could be affected and altered by your speed, traffic jam, road slob, wind speed, number of passengers, tire pressure, air conditioner etc &#8230;   </string>
    <string name="descriptionkm"> Please note that the distance is calculated based on the average of  Litter per 100Km and the distance you can go could be affected and altered by your speed, traffic jam, road slob, wind speed, number of passengers, tire pressure, air conditioner etc &#8230;   </string>
    <string name="tip51"> 1- Full the gas tank at the gas station. &#xA;
                          2- Reset the odometer(trip) number. &#xA;
                          3- Next time at the gas station note down the odometer number line. &#xD;
                          4- Full the gas tank and note down the amount of Gallon or Litter. &#xD;
                          5- Now you have all the numbers you need to calculate the accurate fuel efficiency of your car. &#xD;  </string>
    <string name="tip52"> you can save MPG or Liter/100Km to also calculate the distance you can drive !</string>

</resources>
