<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hosen.khp.mpg.Layout6" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="110"
        android:showAsAction="never" />
    <item android:id="@+id/action_activity_layout2"
        android:title="@string/activity_layout2"
        android:orderInCategory="103"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout3"
        android:title="@string/activity_layout3"
        android:orderInCategory="104"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout4"
        android:title="@string/activity_layout4"
        android:orderInCategory="105"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout5"
        android:title="@string/activity_layout5"
        android:orderInCategory="101"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout1"
        android:title="@string/activity_layout1"
        android:orderInCategory="102"
        android:showAsAction="ifRoom" />
</menu>
