<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MyActivity" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="110"
        app:showAsAction="never" />
    <item android:id="@+id/action_activity_layout2"
        android:title="@string/activity_layout2"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout3"
        android:title="@string/activity_layout3"
        android:orderInCategory="102"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout4"
        android:title="@string/activity_layout4"
        android:orderInCategory="103"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout5"
        android:title="@string/activity_layout5"
        android:orderInCategory="107"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout6"
        android:title="@string/activity_layout6"
        android:orderInCategory="106"
        app:showAsAction="ifRoom" />
</menu>
