<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hosen.khp.mpg.Layout5" >
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_activity_layout2"
        android:title="@string/activity_layout2"
        android:orderInCategory="102"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout3"
        android:title="@string/activity_layout3"
        android:orderInCategory="103"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout4"
        android:title="@string/activity_layout4"
        android:orderInCategory="104"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout6"
        android:title="@string/activity_layout6"
        android:orderInCategory="105"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_activity_layout1"
        android:title="@string/activity_layout1"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />
</menu>
